# prompt-clash-game

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  INSTALLATION.md  README.md  docker-build-push.bat  docker-compose.yml  init.sql
admin_interface/: .env.example  Dockerfile  app.py  config.py  config.yaml  pyproject.toml
admin_interface/api/: admin_api.py  http_client.py
admin_interface/components/: render_control_buttons.py  render_images.py  render_login.py  render_settings_selector.py  render_sidebar.py  render_stats.py
admin_interface/pages/: home.py  image_visualizer.py  round_controller.py
admin_interface/utils/: logger.py  time_formatter.py
admin_service/: .env.example  Dockerfile  app.py  config.py  pyproject.toml
admin_service/models/: round.py  round_settings.py
admin_service/routers/: chat_router.py  round_router.py  rounds_router.py  themes_router.py
admin_service/services/: chat_service.py  combined_service.py  http_client.py  round_service.py  rounds_service.py  themes_service.py
admin_service/utils/: logger.py  time_utils.py
chat_service/: .dockerignore  .env.example  Dockerfile  app.py  cl_app.py  config.py  pyproject.toml
chat_service/.chainlit/: config.toml
chat_service/ai/: __init__.py  image_chain.py  prompts.py
chat_service/data/: connection_manager.py  mysql_data_layer.py  oci_storage_client.py
chat_service/handlers/: on_auth_callback.py  on_chat_start.py  on_data_layer.py  on_message.py  on_resume.py
chat_service/routers/: chat_router.py
chat_service/utils/: logger.py
round_manager_service/: .dockerignore  .env.example  Dockerfile  app.py  config.py  pyproject.toml
round_manager_service/handlers/: on_get_all_themes.py  on_get_last_n_rounds.py  on_get_last_round.py  on_get_round_count.py  on_get_round_status.py  on_get_round_theme.py  on_get_round_time_remaining.py  on_is_round_running.py  on_pause_round.py  on_set_round_theme.py  on_set_round_time_duration.py  on_socket.py  on_start_round.py  on_stop_round.py
round_manager_service/utils/: logger.py
(+35 files in other folders)
