[tool.poetry]
name = "chat-service"
version = "0.1.0"
description = "Chat service for Theme Prompt Clash"
authors = ["Lorenzo Favaro"]
license = "MIT"

[tool.poetry.dependencies]
python = "==3.9.2"
chainlit = "==2.1.1"
uvicorn = "==0.34.0"
openai = "^1.60.1"
langchain-openai = "0.3.2"
langchain-community = "0.3.15"
boto3 = "1.35.95"
aiomysql = "^0.2.0"
tenacity = "^9.0.0"
cryptography = "^42.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
